k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8-app
  namespace: k8-app
  labels:
    app.kubernetes.io/name: k8-app
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/part-of: k8
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: k8-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8-app
        app.kubernetes.io/version: "1.0.0"
    spec:
      containers:
        - name: k8-app
          image: ghcr.io/kyleerwin/k8:1.0.0
          ports:
            - containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
